--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "releases"]
 	path = releases
-	url = git@github.com:plotify/releases.git
+	url = https://github.com/plotify/releases.git
